# juego-oca

./: .gitignore  CAMBIOS_ESTRUCTURA.md  CMakeLists.txt  DOCUMENTACION_ARCHIVOS_SRC.md  DOCUMENTACION_TECNICA.md  Makefile  Makefile.windows  README.md  README_WINDOWS.md  READMe.md  RESUMEN_PROYECTO.md  ejecutar_windows.bat  ejemplo_juego.txt  juego_oca  test_casillas_especiales
assets/: Casilla.h  Dado.h  Juego.h  Jugador.h  Tablero.h
gui/: JuegoGUI.cpp  JuegoGUI.h  Makefile  README_GUI.md  ejecutar_gui.bat  ejecutar_gui.sh  juego_oca_gui  main_gui.cpp
qt/: MainWindow.cpp  MainWindow.h  main.cpp
src/: Casilla.cpp  Dado.cpp  Juego.cpp  Jugador.cpp  Tablero.cpp  main.cpp
